--- a/playbook.yml
+++ b/playbook.yml
@@ -1,16 +1,28 @@
 ---
+# - hosts: aml2
+#   roles:
+#     - geerlingguy.composer
+#     - geerlingguy.redis
+#     - oktapodia.phpunit
+#     - ocha.yarn
+#     - roles/git
+#     - roles/laravel
+#     - roles/nginx
+#     - roles/node9
+#     - roles/nvm
+#     - roles/php-fpm
+#     - roles/php7.2
+#     - roles/quasar
+#     - roles/mysql
+
 - hosts: aml2
   roles:
+    - roles/epel
+    - roles/php7.2
     - geerlingguy.composer
     - geerlingguy.redis
+    - geerlingguy.git
     - oktapodia.phpunit
     - ocha.yarn
-    - roles/git
-    - roles/laravel
     - roles/nginx
-    - roles/node9
-    - roles/nvm
-    - roles/php-fpm
-    - roles/php7.2
-    - roles/quasar
-    - roles/mysql
+  become: yes
