--- a/roles/nginx/files/nginx.conf
+++ b/roles/nginx/files/nginx.conf
@@ -30,10 +30,7 @@ http {
     include             /etc/nginx/mime.types;
     default_type        application/octet-stream;
 
-    # Load modular configuration files from the /etc/nginx/conf.d directory.
-    # See http://nginx.org/en/docs/ngx_core_module.html#include
-    # for more information.
+    include gzip.conf;
 
-    include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*;
 }
