--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,8 @@
 ---
+- src: vandcarlos.php_aml2
+- src: vandcarlos.nginx_aml2
+- src: vandcarlos.node_aml2
+- src: vandcarlos.repos_aml2
 - src: geerlingguy.composer
 - src: geerlingguy.redis
 - src: geerlingguy.git
