--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -20,7 +20,7 @@
 - name: Ensure mysqld service is running
   service:
     name: mysqld
-    state: reloaded
+    state: restarted
     enabled: yes
   become: yes
 
