--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: aml2
   roles:
-  - mysql
+  - ../roles/mysql
   - vandcarlos.php_aml2
   - vandcarlos.nginx_aml2
   - vandcarlos.node_aml2
